fix UserDTO